<?xml version="1.0" encoding="utf-8"?>
<!-- resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" -->
<resources>

    <string name="app_name">SexyTopo</string>
    <string name="action_table">Table</string>
    <string name="action_plan">Plan</string>
    <string name="action_elevation">Elevation</string>
    <string name="action_file">File ▶</string>
    <string name="action_survey">Stats</string>
    <string name="action_settings">Settings</string>
    <string name="action_device">DistoX</string>
    <string name="action_calibration">Calibration</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_file_new">New</string>
    <string name="action_file_open">Open…</string>
    <string name="action_file_delete">Delete</string>
    <string name="action_file_save">Save</string>
    <string name="action_file_save_as">Save As…</string>
    <string name="action_file_import">Import…</string>
    <string name="action_file_export">Export…</string>
    <string name="action_tools">Tools ▶</string>
    <string name="action_undo_last_leg">Undo last leg</string>
    <string name="action_do_back_measurements">Back Measurements</string>
    <string name="action_generate_test_survey">Generate Test Survey</string>
    <string name="loaded">Loaded</string>
    <string name="table_head_from">From</string>
    <string name="table_head_to">To</string>
    <string name="table_head_distance">Dist</string>
    <string name="table_head_azimuth">Azm</string>
    <string name="table_head_elevation">Incl</string>
    <string name="title_activity_table">Table</string>
    <string name="title_activity_plan">Plan</string>
    <string name="title_activity_elevation">Elevation</string>
    <string name="title_activity_device">DistoX</string>
    <string name="menu_set_active_station">Set Active Station</string>
    <string name="menu_rename_station">Rename Station</string>
    <string name="menu_edit_leg">Edit Leg</string>
    <string name="menu_upgrade_row">Force New Station</string>
    <string name="menu_delete_row">Delete Row</string>
    <string name="sketch_menu_delete_last_leg">Undo Last Reading</string>
    <string name="sketch_menu_centre_view">Go to Active</string>
    <string name="sketch_menu_show_grid">Graph Paper</string>
    <string name="sketch_menu_snap_to_lines">Snap to Lines</string>
    <string name="sketch_menu_show_station_labels">Station Labels</string>
    <string name="sketch_menu_show_splays">Show Splays</string>
    <string name="sketch_menu_back_measurements">Reverse Legs</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="default_survey_name">NewSurvey</string>
    <string name="loading_survey">Loading</string>
    <string name="loading_survey_error">Failed; error loading survey</string>
    <string name="title_activity_survey">Stats</string>
    <string name="field_survey_name">Survey Name</string>
    <string name="open_survey">Open Survey</string>
    <string name="no_surveys">No surveys found to open</string>
    <string name="dialog_new_survey_title">New Survey: Enter Name</string>
    <string name="dialog_new_survey_name_must_be_unique">Failed: survey name must be unique</string>
    <string name="surveySaved">Saved</string>
    <string name="errorSavingSurvey">Failed: error saving survey</string>
    <string name="dialog_save_as_title">Save As</string>
    <string name="dialog_delete_survey_title">Delete Survey?</string>
    <string name="dialog_delete_survey_content">This will delete the current survey and any associated files (this cannot be undone).</string>
    <string name="errorDeletingSurvey">Failed: error deleting survey</string>
    <string name="cannotDeleteUnsavedSurvey">Failed: cannot delete unsaved survey</string>
    <string name="import_survey">Import Survey</string>
    <string name="no_imports">No import files found</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="carry_on">Continue</string>
    <string name="delete">Delete</string>
    <string name="title_activity_help">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_guide">Guide</string>
    <string name="bluetooth_status">Bluetooth</string>
    <string name="connect_automatically">Connect</string>
    <string name="bluetooth_none">No Bluetooth capabilities</string>
    <string name="paired_status">Paired With</string>
    <string name="request_pair">Pair…</string>
    <string name="request_unpair">Unpair…</string>
    <string name="unpair_command">Unpair</string>
    <string name="bluetooth_on">On</string>
    <string name="device_singular">DistoX</string>
    <string name="device_plural">DistoXes</string>
    <string name="bluetooth_off">Off</string>
    <string name="disto_connection_instructions">To pair: turn on the DistoX, click \'Pair…\', wait, and enter \'0000\' if a code is requested.</string>
    <string name="device_log_connection_requested">Connection requested</string>
    <string name="device_log_connected">Connected</string>
    <string name="device_log_connecting">Connecting&#8230;</string>
    <string name="device_log_waiting">Waiting for data&#8230;</string>
    <string name="device_log_received">Received measurement</string>
    <string name="device_log_connection_stop_requested">Connection close requested</string>
    <string name="device_log_stopping">Closing connection&#8230;</string>
    <string name="device_log_stopped">Connection closed</string>
    <string name="title_activity_calibration">Calibration</string>
    <string name="log">Log</string>
    <string name="clear_log">Clear</string>
    <string name="error_prefix">Error:</string>
    <string name="manual_add_station_title">Add Station</string>
    <string name="manual_add_splay_title">Add Splay</string>
    <string name="manual_edit_leg_title">Edit Leg</string>
    <string name="manual_edit_distance">Distance (m)</string>
    <string name="manual_edit_azimuth">Azimuth (&#176;)</string>
    <string name="manual_edit_inclination">Inclination (&#176;)</string>
    <string name="manual_edit_left">Left (m)</string>
    <string name="manual_edit_right">Right (m)</string>
    <string name="manual_edit_up">Up (m)</string>
    <string name="manual_edit_down">Down (m)</string>
    <string name="continue_question">Continue?</string>
    <string name="delete_question">Delete?</string>
    <string name="no_data">No Data</string>
    <string name="delete_row_question">Delete Row?</string>
    <string name="stats_length">Length (m)</string>
    <string name="stats_vertical_range">Vertical Range (m)</string>
    <string name="stats_number_stations">Number of Stations</string>
    <string name="stats_longest_leg">Longest Leg (m)</string>
    <string name="stats_shortest_leg">Shortest Leg (m)</string>
    <string name="pref_station_symbol">Station symbol</string>
    <string name="position_cross_section_instruction">Select where to draw cross-section</string>
    <string name="warning_survey_not_saved">Warning: current survey not saved</string>
</resources>