<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.hwyl.sexytopo.control.activity.PlanActivity" >

    <item android:id="@+id/action_table"
        android:title="@string/action_table"
        android:icon="@drawable/ic_action_view_as_list"
        app:showAsAction="always"/>
    <item android:id="@+id/action_plan"
        android:title="@string/action_plan"
        android:icon="@drawable/plan"
        app:showAsAction="always"/>
    <item android:id="@+id/action_elevation"
        android:title="@string/action_elevation"
        android:icon="@drawable/elevation"
        app:showAsAction="always"/>

    <item android:id="@+id/action_file"
        android:title="@string/action_file"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_file_new"
                android:title="@string/action_file_new" />
            <item android:id="@+id/action_file_open"
                android:title="@string/action_file_open" />
            <item android:id="@+id/action_file_save"
                android:title="@string/action_file_save" />
            <item android:id="@+id/action_file_save_as"
                android:title="@string/action_file_save_as" />
            <item android:id="@+id/action_file_export"
                android:title="@string/action_file_export" />
            <item android:id="@+id/action_file_delete"
                android:title="@string/action_file_delete" />
        </menu>
    </item>
    <item android:id="@+id/action_survey"
        android:title="@string/action_survey"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_device"
        android:title="@string/action_device"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>