<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/manual_edit_distance"
            >
            <requestFocus />
            </TextView>
        <EditText
            android:id="@+id/editDistance"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:inputType="number|numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/manual_edit_azimuth"
            />
        <EditText
            android:id="@+id/editAzimuth"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:inputType="number|numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/manual_edit_inclination"
            />
        <EditText
            android:id="@+id/editInclination"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:inputType="number|numberDecimal|numberSigned"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/manual_edit_left"
            >
            <requestFocus />
        </TextView>
        <EditText
            android:id="@+id/editDistanceLeft"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:inputType="number|numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/manual_edit_right"
            >
            <requestFocus />
        </TextView>
        <EditText
            android:id="@+id/editDistanceRight"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:inputType="number|numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/manual_edit_up"
            >
            <requestFocus />
        </TextView>
        <EditText
            android:id="@+id/editDistanceUp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:inputType="number|numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/manual_edit_down"
            >
            <requestFocus />
        </TextView>
        <EditText
            android:id="@+id/editDistanceDown"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:inputType="number|numberDecimal"/>
    </LinearLayout>


</LinearLayout>