<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.hwyl.sexytopo.control.activity.SurveyActivity">

    <!--
    <TextView
        android:text="@string/field_survey_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
    android:id="@+id/survey_name"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="text" />

    <Button
        android:src="@drawable/move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Survey"
        android:id="@+id/buttonSaveSurvey"
        />
        -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:text="@string/stats_length"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="start"
                />
            <TextView
                android:id="@+id/statsFieldLength"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="end"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/stats_vertical_range"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="start"
                />
            <TextView
                android:id="@+id/statsFieldDepth"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="end"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/stats_number_stations"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="start"
                />
            <TextView
                android:id="@+id/statsFieldNumberStations"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="end"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/stats_longest_leg"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="start"
                />
            <TextView
                android:id="@+id/statsFieldLongestLeg"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="end"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/stats_shortest_leg"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="start"
                />
            <TextView
                android:id="@+id/statsFieldShortestLeg"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="end"/>
        </TableRow>
    </TableLayout>



</LinearLayout>
